# sphinxcontrib-bibtex

./: .coveragerc  .flake8  .gitignore  .isort.cfg  .readthedocs.yaml  .travis.yml  CHANGELOG.rst  INSTALL.rst  LICENSE.rst  MANIFEST.in  README  README.rst  VERSION  mypy.ini  pyproject.toml  pytest.ini  release_checklist.txt  requirements.txt  setup.cfg  setup.py  shell.nix  tox.ini
.github/workflows/: build.yml  python-package.yml  release.yml
doc/: Makefile  api.rst  changes.rst  conf.py  implementation.rst  index.rst  license.rst  make.bat  quickstart.rst  related.rst  usage-bibtex2.rst  usage-footbib.rst  usage.rst
doc/api/: bibfile.rst  cache.rst  directives.rst  domain.rst  domains.rst  interface.rst  nodes.rst  plugin.rst  pybtex.rst  referencing.rst  roles.rst  transforms.rst
doc/implementation/: cache.rst  directives.rst
sphinxcontrib/: bibtex.py
sphinxcontrib/bibtex/: __init__.py  bibfile.py  cache.py  directives.py  domain.py  foot_directives.py  foot_domain.py  foot_nodes.py  foot_roles.py  foot_transforms.py  latex_codec.py  latex_lexer.py  nodes.py  plugin.py  roles.py  transforms.py
sphinxcontrib/bibtex2/: __init__.py  bibfile.py  cache.py  directives.py  foot_cache.py  foot_directives.py  foot_nodes.py  foot_roles.py  foot_transforms.py  transforms.py
sphinxcontrib/footbib/: __init__.py  cache.py  directives.py  nodes.py  roles.py  transforms.py
test/: .coveragerc  bibliography.rst  common.py  conf.py  conftest.py  index.rst  natbib.py  path.py  some_module_cite.py  test.bib  test_autoapi.py  test_autodoc.py  test_backrefs.py  test_bibfile_out_of_date.py  test_bibfilenotfound.py  test_bibfiles.py  test_bibliography.py  test_bibliography_empty.py  test_bibliography_style_label.py  test_citation.py  test_citation_mixed.py  test_citation_multiple_keys.py  test_citation_no_author_no_key.py  test_citation_not_found.py  test_citation_rinoh.py  test_citation_target.py  test_citation_whitespace.py  test_citationnotfound.py  test_cite_brackets.py  test_conf_missing_bibfiles.py  test_crossref.py  test_custom_labels.py  test_custom_style.py  test_debug.py  test_debug.txt  test_debug_citation.txt  test_duplicate.py  test_duplicate_warnings.py  test_filter.py  test_filter_fix_author_keyerror.py  (+52 more)
test/autodoc/: conf.py  some_module_cite.py  some_module_footcite.py  test.bib
test/bibfile_out_of_date/: contents.rst  index.rst  test_new.bib  test_old.bib
test/bibfilenotfound/: conf.py
test/some_cython_module/: .gitignore  pyproject.toml  setup.py
test/some_cython_module/src/some_cython_module/: footcite.pyx
(+503 files in other folders)
