[build-system]
requires = ["setuptools", "wheel", "Cython"]

[project]
name = "some-cython-module"
version = "0.0.1"
license = { text = "BSD-2-Clause" }
authors = [
    {email = "matthias.troffaes@gmail.com"},
    {name = "Matthias C. M. Troffaes"},
]
description = "Test module for bibtex citations in cython modules."
requires-python = ">=3.6"
